[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'runtime',
]

#[patch."https://github.com/integritee-network/pallets.git"]
#pallet-claims = { path = '../pallets/claims' }
#pallet-teerex = { path = '../pallets/teerex' }
#pallet-teeracle = { path = '../pallets/teeracle' }

################################################################################
# [patch."https://github.com/Interstellar-Network/pallets.git"]
# pallet-ocw-circuits = { path = "../pallets/pallets/ocw-circuits/" }
# pallet-tx-registry = { path = "../pallets/pallets/tx-registry/" }

# [patch."https://github.com/Interstellar-Network/rs-common.git"]
# interstellar-http-client = { path = "../rs-common/http-client/" }
# interstellar-ipfs-client = { path = "../rs-common/ipfs-client-http-req/" }
# png-utils = { path = "../rs-common/png_utils"

################################################################################
